<resources>
    <string name="partee">파티</string>
    <string name="matching">매칭</string>
    <string name="nickname">닉네임</string>티
    <string name="age">나이</string>
    <string name="age_unit_korean">세</string>
    <string name="years_playing">구력</string>
    <string name="average">평균 타수</string>
    <string name="average_unit_korean">타</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="change">변경</string>
    <string name="save">저장</string>
    <string name="save_2">저장하기</string>
    <string name="cancel">취소</string>
    <string name="search">검색</string>
    <string name="team">TEAM</string>
    <string name="me">ME</string>
    <string name="reservation">예약</string>
    <string name="reservation_2">예약하기</string>
    <string name="chat">채팅</string>
    <string name="year_unit_korean">년</string>
    <string name="average_korean">평균</string>
    <string name="head_count_unit_korean">명</string>
    <string name="participate">참여하기</string>
    <string name="upload">올리기</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="location">지역</string>
    <string name="heat_count">인원</string>
    <string name="place">지점</string>
    <string name="consecutive_stay">연박</string>
    <string name="couple">부부/커플</string>
    <string name="soon_end">마감 임박</string>
    <string name="free_fee">비용 없음</string>
    <string name="money_unit_korean">원</string>
    <string name="people_count">총 %d명</string>
    <string name="partee_count">매칭된 파티 %d</string>

    <!-- 메뉴 -->
    <string name="home">홈</string>
    <string name="group">파티 목록</string>
    <string name="recruit">파티 찾기</string>

    <!-- 지역 -->
    <string name="nationwide">전국</string>
    <string name="seoul">서울</string>
    <string name="busan">부산</string>
    <string name="daegu">대구</string>
    <string name="incheon">인천</string>
    <string name="gwangju">광주</string>
    <string name="daejeon">대전</string>
    <string name="ulsan">울산</string>
    <string name="gyeonggi">경기</string>
    <string name="gangwon">강원</string>
    <string name="chungbuk">충북</string>
    <string name="chungnam">충남</string>
    <string name="jeonbuk">전북</string>
    <string name="jeonnam">전남</string>
    <string name="gyeongbuk">경북</string>
    <string name="gyeongnam">경남</string>
    <string name="jeju">제주</string>

    <!-- 시간대 -->
    <string name="weekday">주중</string>
    <string name="weekend">주말</string>
    <string name="morning">오전</string>
    <string name="afternoon">오후</string>
    <string name="night">야간</string>
    <string name="dawn">새벽</string>

    <!-- Select Image  -->
    <string name="image_option_gallery">앨범에서 선택</string>
    <string name="image_option_camera">사진 직접 촬영</string>
    <string name="upload_image_fail_file_extension">jpg, jpeg, png, webp 형식의 이미지 파일만 업로드 가능합니다.</string>
    <string name="upload_image_fail_unknown">이미지를 다시 업로드 해주세요.</string>

    <!-- Information -->
    <string name="info_team_head_count">%d/3</string>
    <string name="info_age">%d 세</string>
    <string name="info_years_playing">%d 년</string>
    <string name="info_average">%d 타</string>

    <!-- 정렬 -->
    <string name="sort_latest">최근 업로드순</string>
    <string name="sort_recruit_end_deadline">모집 마감 임박순</string>
    <string name="sort_recruit_real_date">실제 일정 임박순</string>

</resources>