<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RecruitHomeFragment">

    <data>

        <variable
            name="vm"
            type="com.golfzon.recruit.RecruitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/layout_recruit_appbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/tv_recruit_appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="center"
                android:letterSpacing="0"
                android:lineSpacingExtra="6sp"
                android:text="@string/recruit"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_recruit_appbar_create"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="center"
                android:letterSpacing="0"
                android:lineSpacingExtra="6sp"
                android:paddingHorizontal="20dp"
                android:text="@string/create_recruit"
                android:textColor="@color/primary_8B95B3"
                android:textSize="14sp" />
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/layout_recruit_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="19dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_recruit_appbar"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <Spinner
                    android:id="@+id/spinner_recruit_sort_date"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/background_radius_100_stroke_1"
                    android:elevation="0dp"
                    android:fontFamily="@font/pretendard_medium"
                    android:paddingVertical="4dp"
                    android:popupBackground="@drawable/background_radius_8_stroke_1_primary_background_white"
                    android:stateListAnimator="@null"
                    android:text="@string/date" />

                <Spinner
                    android:id="@+id/spinner_recruit_sort_time"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/background_radius_100_stroke_1"
                    android:elevation="0dp"
                    android:fontFamily="@font/pretendard_medium"
                    android:paddingVertical="4dp"
                    android:popupBackground="@drawable/background_radius_8_stroke_1_primary_background_white"
                    android:stateListAnimator="@null"
                    android:text="@string/time" />

                <!--                <Spinner-->
                <!--                    android:id="@+id/spinner_recruit_sort_location"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="30dp"-->
                <!--                    android:layout_marginStart="8dp"-->
                <!--                    android:background="@drawable/background_radius_100_stroke_1"-->
                <!--                    android:elevation="0dp"-->
                <!--                    android:fontFamily="@font/pretendard_medium"-->
                <!--                    android:paddingVertical="4dp"-->
                <!--                    android:popupBackground="@drawable/background_radius_8_stroke_1_primary_background_white"-->
                <!--                    android:stateListAnimator="@null"-->
                <!--                    android:text="@string/location" />-->

                <CheckBox
                    android:id="@+id/cb_recruit_sort_consecutive_stay"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/selector_background_radius_100_stroke_1"
                    android:button="@null"
                    android:fontFamily="@font/pretendard_medium"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"
                    android:text="@string/consecutive_stay"
                    android:textColor="@drawable/selector_textview_primary_to_white"
                    android:textFontWeight="500" />

                <CheckBox
                    android:id="@+id/cb_recruit_sort_couple"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/selector_background_radius_100_stroke_1"
                    android:button="@null"
                    android:fontFamily="@font/pretendard_medium"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"
                    android:text="@string/couple"
                    android:textColor="@drawable/selector_textview_primary_to_white"
                    android:textFontWeight="500" />

                <CheckBox
                    android:id="@+id/cb_recruit_sort_free_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/selector_background_radius_100_stroke_1"
                    android:button="@null"
                    android:fontFamily="@font/pretendard_medium"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"
                    android:text="@string/free_fee"
                    android:textColor="@drawable/selector_textview_primary_to_white"
                    android:textFontWeight="500" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recruit_posts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_recruit_filters"
            tools:itemCount="5"
            tools:listitem="@layout/item_recruit_post" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_recruit_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="72dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/background_radius_100"
            app:backgroundTint="@color/primary_8B95B3"
            app:itemRippleColor="@android:color/transparent"
            app:itemTextColor="@drawable/selector_textview_white_50_to_white"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>